--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
+  "name": "mojo-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "run.js",
+  "scripts": {
+    "test": "jest --runInBand --watchAll",
+    "seed": "node src/db/seed.js",
+    "dev": "nodemon src/run.js",
+    "start": "node src/run.js"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "jest": "^29.7.0",
-    "sequelize": "^6.33.0",
-    "sqlite3": "^5.1.6"
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   }
 }
